methods.picture.MethodsPictureLarge.scala.error
Erreur de compilation :
MethodsPictureLarge:64: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime11.MethodsPictureLarge'
override def run() {
             ^