methods.picture.MethodsPictureLarge.scala.code
override def run() {
}
def faireV(){
  avance();
  avance();
  baisseBrosse();
  leveBrosse();
  avance();
  gauche();
  avance();
  baisseBrosse();
  leveBrosse();
	droite();
  avance();
  droite();
  avance();
  baisseBrosse();
  leveBrosse();
  gauche();
  avance();
  avance();
  gauche();
}
def faireMotif(){ 
  for(i<-1 to 4){
    faireV();
}  
}
def avanceloin(){
  for(i<-1 to 7){
    avance();
  }
  
}
def faireligne(){
  for(k<-1 to 2){
   faireMotif();
  avanceloin();
  }
  faireMotif();
} 
def allerlignesuivante(){
  var A:Int =getY();
  setY(A-7);
  setX(getX()-14)
  
}
def fairecube(){
 faireligne();
 allerlignesuivante();
 faireligne();
 allerlignesuivante();
  faireligne(); 
}
def sepositionner(){
  setPos(getX()+7,getY()+14)
}
def changerligne(){
  var A:Int =getY();
  setY(A-7);
  setX(getX()-56)
  
}
override def run() {
	 
  fairecube();
  sepositionner();
  fairecube();
  sepositionner();
  fairecube();
  changerligne()
  fairecube();
  sepositionner();
  fairecube();
  sepositionner();
  fairecube();
  changerligne()
  fairecube();
  sepositionner();
  fairecube();
  sepositionner();
  fairecube();
  
  
  setPos(0,62);
}